--- a/index.html
+++ b/index.html
@@ -8,15 +8,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <h1>Site da Turma H - Tarde</h1>
-        <p>Teste github.dev</p>
+    <header class="cabecalho">
+        <img class="cabecalho-imagem" src="https://is3-ssl.mzstatic.com/image/thumb/Purple112/v4/0b/74/35/0b743559-59d9-8d1c-3de0-056e79029a48/AppIcon-0-0-1x_U007emarketing-0-0-0-10-0-0-sRGB-0-0-0-GLES2_U002c0-512MB-85-220-0-0.png/256x256bb.jpg" alt="logo-da-alura">
 
-        <h2>Codespace liveserver no github</h2>
-
-        <ul>
-            <li>Escola</li>
-            <li>Estudante</li>
+        <ul class="cabecalho-lista">
+            <li class="cabecalho-item">Escola</li>
+            <li class="cabecalho-item">Estudante</li>
         </ul>
     </header>
 
