--- a/index.html
+++ b/index.html
@@ -17,6 +17,13 @@
         </ul>
     </header>
 
+    <section class="escola">
+        <h2 class="escola-titulo">Sobre a minha turma</h2>
+        <p class="escola-paragrafo1">Texto sobre a minha turma. Esse texto é o primeiro parágrafo deste projeto</p>
+        <p class="escola-paragrafo2">Este é o segundo parágrafo que estamos escrevendo no projeto</p>
+        <img src="teclado-mouse.png" alt="mão no teclado">
+    </section>
+
 
 
 </body>
