seção estudante e fontes

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Turma H</title>
     <link rel="stylesheet" href="style.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter&family=Noto+Serif+Hebrew:wght@300&display=swap" rel="stylesheet">   
 </head>
 <body>
     <header class="cabecalho">
@@ -21,7 +25,34 @@
         <h2 class="escola-titulo">Sobre a minha turma</h2>
         <p class="escola-paragrafo1">Texto sobre a minha turma. Esse texto é o primeiro parágrafo deste projeto</p>
         <p class="escola-paragrafo2">Este é o segundo parágrafo que estamos escrevendo no projeto</p>
-        <img src="teclado-mouse.png" alt="mão no teclado">
+        <img class="escola-imagem" src="teclado-mouse.png" alt="mão no teclado">
+    </section>
+
+    <section class="estudante">
+        <h2 class="estudante-titulo">Estudantes</h2>
+
+        <div class="estudante-div-maior">
+            <div class="estudante-div">
+                <img src="prof 1.png" alt="imagem do aluno" class="estudante-imagem">
+                <img src="github-icon 1.png" alt="icone do github">
+            </div>
+
+            <div class="estudante-div">
+                <img src="prof 1.png" alt="imagem do aluno" class="estudante-imagem">
+                <img src="github-icon 1.png" alt="icone do github">
+            </div>
+
+            <div class="estudante-div">
+                <img src="prof 1.png" alt="imagem do aluno" class="estudante-imagem">
+                <img src="github-icon 1.png" alt="icone do github">
+            </div>
+
+            <div class="estudante-div">
+                <img src="prof 1.png" alt="imagem do aluno" class="estudante-imagem">
+                <img src="github-icon 1.png" alt="icone do github" class="estudante-git">
+            </div>
+        </div>
+
     </section>
 
 
