--- a/index.html
+++ b/index.html
@@ -12,22 +12,28 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter&family=Noto+Serif+Hebrew:wght@300&display=swap" rel="stylesheet">   
 </head>
 <body>
+    <!--Seção Cabeçalho-->
     <header class="cabecalho">
-        <img class="cabecalho-imagem" src="https://is3-ssl.mzstatic.com/image/thumb/Purple112/v4/0b/74/35/0b743559-59d9-8d1c-3de0-056e79029a48/AppIcon-0-0-1x_U007emarketing-0-0-0-10-0-0-sRGB-0-0-0-GLES2_U002c0-512MB-85-220-0-0.png/256x256bb.jpg" alt="logo-da-alura">
+        <h1 class="cabecalho-titulo">Site da Turma H --- TARDE</h1>
 
         <ul class="cabecalho-lista">
             <li class="cabecalho-item">Escola</li>
             <li class="cabecalho-item">Estudante</li>
         </ul>
     </header>
-
+<!--Seção Escola-->
     <section class="escola">
         <h2 class="escola-titulo">Sobre a minha turma</h2>
-        <p class="escola-paragrafo1">Texto sobre a minha turma. Esse texto é o primeiro parágrafo deste projeto</p>
-        <p class="escola-paragrafo2">Este é o segundo parágrafo que estamos escrevendo no projeto</p>
-        <img class="escola-imagem" src="teclado-mouse.png" alt="mão no teclado">
+        <div class="escola-texto-imagem">
+            <div class="escola-div">
+                        
+                <p class="escola-paragrafo">A turma H é uma turma muita boa, os professores cursistas sempre participam das aulas. 
+                Esta semana será a última que iremos estudar. Pois na próxima haverá as apresentações.</p>
+            </div>
+                <img class="escola-imagem" src="teclado-mouse.png" alt="mão no teclado">
+        </div>
     </section>
-
+<!-- Seção Estudante-->
     <section class="estudante">
         <h2 class="estudante-titulo">Estudantes</h2>
 
